--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
        <title>My First Website</title>
        <style>
         body {
-            background: rgb(0, 0, 0);
-            color: rgb(45, 45, 45);
+            background: rgb(8, 5, 49);
+            color: rgb(255, 255, 255);
             padding: 10px;
             font-family: arial;
         }
@@ -16,7 +16,7 @@
      
         /* navigation menu */
         nav {
-            background: rgb(0, 238, 255);
+            background: rgb(94, 94, 94);
            margin: 0 auto;
            margin-bottom: 20px;
             display: flex;
@@ -25,7 +25,7 @@
         h1 {
             display: flex;
             align-items: center;
-            color: rgb(94, 94, 94);
+            color: rgb(255, 255, 255);
             flex: 1;
             margin: 0;
         }
@@ -38,12 +38,12 @@
         }
         a {
             text-decoration: none;
-            color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
         }
      
         /* main container area beneath menu */
         main {
-            background: rgb(0, 238, 255);
+            background: rgb(94, 94, 94);
             display: flex;
         }
         .sidebar {
@@ -93,7 +93,7 @@
                     <h2>Blake Caire</h2>
                     <p>Student at Northshore High</p>
                    <!-- Interests section -->
-                    <div id="intrests">
+                    <div id="interests">
                         <h3>Interests</h3>
                         <ul>
                             <li>Music</li>
