--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <main>
                 <!-- Sidebar section -->
                  <div class="sidebar">
-                    <img class="sidebar-img" src = "images/Profilepic.png"> 
+                    <img class="sidebar-img" src = "images/Profilepic.jpg"> 
                  </div>
 
                  <!-- Content section -->
