--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
            margin-bottom: 20px;
             display: flex;
             padding: 10px;
+            border-radius: 15px;
         }
         h1 {
             display: flex;
@@ -45,6 +46,7 @@
         main {
             background: rgb(94, 94, 94);
             display: flex;
+            border-radius: 15px;
         }
         .sidebar {
             margin-right: 25px;
@@ -52,6 +54,7 @@
         }
         .sidebar-img {
             width: 200px;
+            border-radius: 15px;
         }
         .content {
             flex: 1;
@@ -59,6 +62,7 @@
         }
         #interests {
             border: 4px rgb(0, 238, 255) ridge;
+            border-radius: 10px;
             padding: 8px;
         }
         h2, h3 {
