--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
            margin-bottom: 20px;
             display: flex;
             padding: 10px;
+           border-radius: 15px; 
         }
         h1 {
             display: flex;
@@ -46,6 +47,7 @@
         main {
             background: rgb(94, 94, 94);
             display: flex;
+            border-radius: 15px;
         }
         .sidebar {
             margin-right: 25px;
