Shootig Star Fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
                     <h1>Khan Academy Portfolio</h1>
                     <ul class="portfolio">
                         <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/5518367430066176">What's For Dinner</a></li>
-                        <li><a href="</li>https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/6683643529969664">Shooting Star</a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/6683643529969664">Shooting Star</a></li>
                     </ul>
                 </div>
             </main>
