--- a/portfolio.html
+++ b/portfolio.html
@@ -118,6 +118,7 @@
                         <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/5518367430066176">What's For Dinner</a></li>
                         <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/6683643529969664">Shooting Star</a></li>
                         <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6544026331824128">Animal Attack</a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6140272649486336">Ad Design</a></li>
                     </ul>
                 </div>
             </main>
