added emojis and halloween project

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,11 +115,12 @@
                     </ul>
                     <h1>Khan Academy Portfolio</h1>
                     <ul class="portfolio">
-                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/5518367430066176">What's For Dinner</a></li>
-                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/6683643529969664">Shooting Star</a></li>
-                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6544026331824128">Animal Attack</a></li>
-                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6140272649486336">Ad Design</a></li>
-                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-fish-tank/6320775696531456">Fish Tank</a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/5518367430066176">&#127830; What's For Dinner</a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/6683643529969664">&#x1F320; Shooting Star</a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6544026331824128">🐍 Animal Attack</a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6140272649486336">📺 Ad Design</a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-fish-tank/6320775696531456"> 🐟 Fish Tank</a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/halloween-project/4834067176013824">&#127875; Halloween </a></li>
                     </ul>
                 </div>
             </main>
