--- a/portfolio.html
+++ b/portfolio.html
@@ -121,6 +121,7 @@
                         <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6140272649486336">📺 Ad Design</a></li>
                         <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-fish-tank/6320775696531456"> 🐟 Fish Tank</a></li>
                         <li><a href="https://www.khanacademy.org/computer-programming/halloween-project/4834067176013824">&#127875; Halloween </a></li>
+                        <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-magic-8-ball/4606953780723712"> 🎱  Magic 8 Ball</a></li>
                     </ul>
                 </div>
             </main>
