--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,12 +14,14 @@
 			user-select: none;
 			display: block;
 			position: absolute;
-			top: 100px;
+			top: 0px;
 			left: 0px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
+			background-color: rgb(0, 174, 255);
 		}
+		
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
@@ -40,21 +42,36 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
-
+			var boardHeight = jQuery(window).height(); // the maximum Y-Coordinate of the screen
 			// Every 50 milliseconds, call the update Function (see below)
-			setInterval(update, 50);
+			var interval = setInterval(update, 50);
 			
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
-
+			//Every time the board is clicked, call the handleBoardClick Function (see below)
+			board.on('click', handleBoardClick);
+			box.css('background-color', colorStr);
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX,newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top",newPositionY);
 			}
 
 			// changes the text displayed on the Box
 			function changeBoxText(newText) {
 				box.text(newText);
+			}
+			// ends game
+			function endGame() {
+    			clearInterval(interval);
+			}
+			// creates a random color for the box
+			function getRandomColor(){
+				var randomR = Math.random()*255;
+				var randomG = Math.random()*255;
+				var randomB = Math.random()*255;
+				colorStr = "rgb(" + randomR + "," + randomG + "," + randomB + ")";
+				return(colorStr);
 			}
 
 			//////////////////////////////////////////////////////////////////
@@ -62,29 +79,80 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
-			
+			{
+				var positionX = 0;
+				var speedX = 10;
+				var positionY = 0;
+				var speedY = 10;
+				var points = 0;
+				var divByThree = points % 3;
+				var speedChange = 3; 
+				var misclicks = 0; 
+				var colorStr = "rgb(50, 25, 250)";
+			} 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				
-
+				moveBoxTo(positionX,positionY);
+				positionX += speedX;
+				positionY += speedY;
+				if(positionX > boardWidth - 70) {
+					speedX *= -1;
+				}
+				if(positionX < 0) {
+					speedX *= -1;
+				}
+				if(positionY > boardHeight - 70) {
+					speedY *= -1;
+				}
+				if(positionY < 0) {
+					speedY *= -1;
+				}
 			};
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
-			*/
+			*/ 
 			function handleBoxClick() {
+				var randX = Math.random() * (boardWidth - 70);
+				var randY = Math.random() * (boardHeight - 70);
+				positionX = randX;
+				positionY = randY;
+				points ++;
+				divByThree = points % 3;
+				if(divByThree === 0 ){
+					speedChange += 1;
+				}
+				changeBoxText(points);
+				if(speedX > 0){
+					speedX +=speedChange;
+				}
+				else if (speedX < 0){
+					speedX -=speedChange;
+				}
+				if(speedY > 0){
+					speedY +=speedChange;
+				}
+				else if (speedY < 0){
+					speedY -=speedChange;
+				}
+				getRandomColor();
+				box.css('background-color', colorStr);
 				
-
-
 			};
+			// this function is called each time the board is clicked and once the board has been clicked 10 times the game ends
+			function handleBoardClick() {
+				misclicks ++;
+				if ( misclicks >= 10){
+				 endGame();
+			}
+			};
+			
 		})();
 	</script>
 </body>
